// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection should render connected component 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] }"
        newentryurl=""
      />
      <mock-collection-controls
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] }"
        sortablefields=""
        viewstyle="VIEW_STYLE_LIST"
      />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] }"
        viewstyle="VIEW_STYLE_LIST"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
        newentryurl="/collections/pages/new"
      />
      <mock-collection-controls
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
        viewstyle="VIEW_STYLE_LIST"
      />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
        viewstyle="VIEW_STYLE_LIST"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection with create url and path 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
        newentryurl="/collections/pages/new?path=dir1/dir2"
      />
      <mock-collection-controls
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
        viewstyle="VIEW_STYLE_LIST"
      />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": true }"
        filterterm="dir1/dir2"
        viewstyle="VIEW_STYLE_LIST"
      />
    </main>
  </div>
</DocumentFragment>
`;

exports[`Collection should render with collection without create url 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 28px 18px;
}

.emotion-0 {
  padding-left: 280px;
}

<div
    class="emotion-2 emotion-3"
  >
    <mock-sidebar
      collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": false }"
      collections="OrderedMap { 0: Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [] } }"
    />
    <main
      class="emotion-0 emotion-1"
    >
      <mock-collection-top
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": false }"
        newentryurl=""
      />
      <mock-collection-controls
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": false }"
        viewstyle="VIEW_STYLE_LIST"
      />
      <mock-entries-collection
        collection="Map { \\"name\\": \\"pages\\", \\"sortableFields\\": List [], \\"create\\": false }"
        viewstyle="VIEW_STYLE_LIST"
      />
    </main>
  </div>
</DocumentFragment>
`;
